--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Byrant's Bike Shop</title>
+        <title>Bryant's Bike Shop</title>
         <link href="https://fonts.googleapis.com/css?family=Abel|Amatic+SC|Raleway:100,200,300,400,500,600,700,800,900" rel="stylesheet">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" rel="stylesheet">
         <link href="style.css" rel="stylesheet" type="text/css">
@@ -10,7 +10,7 @@
         <ul>
           <li>Home</li>
           <li>Adult Bikes</li>
-          <li id="logo">Baker's Bike Shop</li>
+          <li id="logo">Byrant's Bike Shop</li>
           <li>Kid's Bikes</li>
           <li>Contact Us</li>
         </ul>
