--- a/index.html
+++ b/index.html
@@ -26,28 +26,28 @@
     <div class="products">
         <h3 class="blue">Best Sellers</h3>
         <div class="product">
-            <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-8/htmlcss1-img_bike.png">
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-8/htmlcss1-img_bike.png" width="100%">
             <h3>The Monarch</h3>
             <p>The Monarch Bike is our original beach cruiser. It's perfect for strolling bike rides down beach promenades and small enough to stash just anywhere</p>
             <h4>$200.00</h4>
       <a href="#buy" class="btn">Buy</a>
     </div>
         <div class="product">
-            <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-8/htmlcss1-img_bike2.png">
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-8/htmlcss1-img_bike2.png" width="100%">
             <h3>The Sunny</h3>
             <p>Our most popular beach cruiser, adorned with a white basket and bell for those who use their cruiser for any of those weekend errands.</p>
             <h4>$150.00</h4>
             <a href="#buy" class="btn">Buy</a>
         </div>
         <div class="product">
-            <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-8/htmlcss1-img_bike3.png">
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-8/htmlcss1-img_bike3.png" width="100%">
             <h3>The Ghost</h3>
             <p>For those who want to stand out, our Ghost bike only comes in white, highlighted with black details and built to have a hyrbid cruiser, road bike look.</p>
             <h4>$300.00</h4>
             <a href="#buy" class="btn">Buy</a>
         </div>
         <div class="product">
-            <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-8/htmlcss1-img_bike4.png">
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-8/htmlcss1-img_bike4.png" width="100%">
             <h3>The Lisa</h3>
             <p>Named after our founder's wife, because this is her favorite bike! Built with a family in mind, as it has an easy buggy attachment to pull along your kids.</p>
             <h4>$475.00</h4>
@@ -58,28 +58,28 @@
    <div class="products">
        <h3 class="blue">Newest Bikes</h3>
     <div class="product">
-      <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-8/htmlcss1-img_bike5.png">
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-8/htmlcss1-img_bike5.png" width="100%">
       <h3>The Octopus</h3>
       <p>The Jade is our newest kid's bike. It comes standard with training wheels making it the perfect starter bike for your little ones.</p>
       <h4>$95.00</h4>
       <a href="#buy" class="btn">Buy</a>
     </div>
     <div class="product">
-      <img src="http://i.picresize.com/images/2017/08/04/6fMY3.jpg">
+      <img src="http://i.picresize.com/images/2017/08/04/6fMY3.jpg" width="100%">
       <h3>The Gemini</h3>
       <p>The Gemini is our only tandem bike for those who don't want to ride alone. It's built for room and comfort and folds for easy storage.</p>
       <h4>$350.00</h4>
       <a href="#buy" class="btn">Buy</a>
     </div>
     <div class="product">
-      <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-8/htmlcss1-img_bike7.png">
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-8/htmlcss1-img_bike7.png" width="100%">
       <h3>The Techie</h3>
       <p>Your bike should be just as tech as you are. This new bike is built with bluetooth speakers, a mount for your apple watch, and an electric hybrid mode.</p>
       <h4>$950.00</h4>
       <a href="buy" class="btn">Buy</a>
     </div>
     <div class="product">
-      <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-8/htmlcss1-img_bike8.png">
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-8/htmlcss1-img_bike8.png" width="100%">
       <h3>The Mini</h3>
       <p>The Mini is named for it's light frame and foldability. It folds into 1/4 of it's size and stores perfectly under any standard bed. Perfect for apartment dwellers.</p>
       <h4>$250.00</h4>
